plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.github.jwharm.javagi:adw:0.12.2'
    implementation 'io.github.jwharm.javagi:gtksourceview:0.12.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.named('run') {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

application {
    mainClass = "io.github.jwharm.javagi.examples.codeeditor.CodeEditor"
}

